# poetry-on-docker

./: Dockerfile  README.md
sample/: Dockerfile
sample/my_python_project/: Dockerfile  pyproject.toml
sample/my_python_project/my_python_project/: __init__.py  main.py
