[tool.poetry]
name = "my-python-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.scripts]
my-app = "my_python_project:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
